# zc-ring-x1

./: .gitignore  .vc-config.toml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  mpsc-pin-01.txt  mpsc-pin-012.txt  mpsc-pin-03.txt  mpsc-pin-none.txt  spsc-pin-01.txt  spsc-pin-012.txt  spsc-pin-03.txt  spsc-pin-none.txt  version.toml
examples/: pool_readme.rs  readme.rs  tp_roundtrip.rs
notes/: README.md  bugs.md  cycle-protocol.md  done.md  jj-tips.md  ring-buffer-design.md  substep-test.sh  todo-backlog.md  todo.md  versioning.md  zc-msg-x1.md
notes/chores/: chores-01.md  chores-02.md
src/: consumer.rs  lib.rs  mpsc.rs  policy.rs  pool.rs  producer.rs  registry.rs
src/mpsc/: mod.rs
src/mpsc/v0/: consumer.rs  mod.rs  producer.rs
src/pool/: mod.rs
src/spsc/: mod.rs
src/spsc/v0/: consumer.rs  mod.rs  producer.rs
tp_matrix/: Cargo.toml  README.md
tp_matrix/src/: lib.rs
tp_runner/: Cargo.toml  README.md
tp_runner/src/: lib.rs  perf.rs  topo.rs
tprobe/: Cargo.toml  README.md
tprobe/notes/: design.md
tprobe/notes/chores/: chores-01.md
tprobe/src/: band_table.rs  fmt.rs  lib.rs  ticks.rs  tprobe.rs  tprobe_span.rs
tprobe/src/ticks/: aarch64.rs  x86_64.rs
