[package]
name = "zc-ring-x1"
# Version-of-record (see notes/versioning.md): advanced through
# the cycle's X.Y.Z-N phases; the -N rides in the semver
# prerelease slot.
version = "0.14.0-2"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
description = "Zero-copy no_std SPSC + MPSC ring buffer experiment"

[dependencies]
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }

# Demo-binary only: thread pinning for the pinned ring runs.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

# Local measurement crates (probes, runner, cells+bins); dev
# tooling only — not dependencies of the library. See
# tp_matrix/ for the installable tp-cell / tp-matrix binaries.
[workspace]
members = ["tprobe", "tp_runner", "tp_matrix"]
